# BKServiceFramework

./: .gitignore
Source/: CMakeLists.txt
Source/BKEngine/: BKEngine.h  BKHashMap.h  BKMath.h  BKMutex.h  BKRotator.h  BKSharedPtr.h  BKString.h  BKThread.h  BKTuple.h
Source/BKExamples/: main.cpp
Source/BKHTTPModule/: CMakeLists.txt
Source/BKHTTPModule/Private/: BKHTTPClient.cpp  BKHTTPHelper.h  BKHTTPRequestParser.h  BKHTTPServerHelper.h
Source/BKHTTPModule/Public/: BKHTTPClient.h
Source/BKSystemModule/Private/: BKCPUMonitor.h
Source/BKUDPModule/Private/: BKUDPClient.cpp  BKUDPHandler.cpp  BKUDPServer.cpp
Source/BKUDPModule/Public/: BKUDPHandler.h
Source/BKUtilitiesModule/Private/: BKAsyncTaskManager.cpp  BKJson.cpp
Source/BKUtilitiesModule/Public/: BKScheduledTaskManager.h  BKTaskDefines.h
SourceTmp/BKEngine/: BKBase64.h  BKConditionVariable.h  BKSafeQueue.h
SourceTmp/BKExamples/: Dependencies.bkdep
SourceTmp/BKHTTPModule/Private/: BKHTTPRequestParser.h
SourceTmp/BKServiceDiscoveryModule/Private/: BKServiceDiscoveryComponent.cpp
SourceTmp/BKSystemModule/Private/: BKMemoryMonitor.h
SourceTmp/BKUDPModule/Private/: BKUDPClient.cpp  BKUDPHandler.cpp
SourceTmp/BKUDPModule/Public/: BKUDPHandler.h
SourceTmp/BKUtilitiesModule/: CMakeLists.txt
SourceTmp/BKUtilitiesModule/Public/: BKUtilities.h
source/: CMakeLists.txt  WDependencies.wdep  main.cpp
source/BKEngine/: BKArray.h  BKBase64.h  BKElementWrapper.h  BKHashMap.h  BKMD5.h  BKMemory.h  BKMutex.h  BKQueue.h  BKReferenceCounter.h  BKRotator.h  BKSharedPtr.h  BKString.h  BKThread.h  BKVector.h  BKVector2D.h
source/BKExamples/: main.cpp
source/BKHTTPModule/: CMakeLists.txt
source/BKHTTPModule/Private/: BKHTTPClient.cpp  BKHTTPRequestParser.h  BKHTTPServer.cpp  BKHTTPServerHelper.h
source/BKHTTPModule/Public/: BKHTTPClient.h  BKHTTPServer.h
source/BKServiceDiscoveryModule/: CMakeLists.txt
source/BKServiceDiscoveryModule/Private/: BKServiceDiscoveryComponent.cpp
source/BKServiceDiscoveryModule/Public/: BKServiceDiscoveryComponent.h
source/BKSystemModule/: CMakeLists.txt
source/BKSystemModule/Private/: BKCPUMonitor.cpp  BKCPUMonitor.h  BKMemoryMonitor.cpp  BKSystemManager.cpp
source/BKSystemModule/Public/: BKSystemManager.h
source/BKUDPModule/: CMakeLists.txt
source/BKUDPModule/Private/: BKUDPClient.cpp  BKUDPHandler.cpp  BKUDPHelper.h  BKUDPServer.cpp
source/BKUDPModule/Public/: BKUDPClient.h  BKUDPHandler.h  BKUDPServer.h
source/BKUtilitiesModule/: CMakeLists.txt
source/BKUtilitiesModule/Private/: BKAsyncTaskManager.cpp  BKJson.cpp  BKScheduledTaskManager.cpp  BKUtilities.cpp
source/BKUtilitiesModule/Public/: BKAsyncTaskManager.h  BKJson.h  BKTaskDefines.h  BKUtilities.h
source/WEngine/: WArray.h  WBase64.cpp  WBase64.h  WConditionVariable.h  WElementWrapper.h  WEngine.h  WMD5.cpp  WMD5.h  WMath.h  WMemory.h  WMutex.h  WQueue.h  WReferenceCounter.h  WRotator.h  WSafeQueue.h  WSegvCatch.h  WString.h  WThread.h  WVector.h  WVector2D.h
source/WExamples/: WDependencies.wdep  main.cpp
source/WHTTPModule/: CMakeLists.txt
source/WHTTPModule/Private/: WHTTPClient.cpp  WHTTPHelper.h  WHTTPManager.cpp  WHTTPRequestParser.h  WHTTPServer.cpp  WHTTPServerHelper.h
source/WHTTPModule/Public/: WHTTPClient.h  WHTTPManager.h  WHTTPServer.h
source/WNetworkModule/: CMakeLists.txt
source/WNetworkModule/Private/: WUDPManager.cpp
source/WNetworkModule/Public/: WNetworkHelper.h  WUDPManager.h
source/WServiceDiscoveryModule/: CMakeLists.txt
source/WServiceDiscoveryModule/Private/: WServiceDiscoveryComponent.cpp
source/WServiceDiscoveryModule/Public/: WServiceDiscoveryComponent.h
source/WSystemModule/: CMakeLists.txt
source/WSystemModule/Private/: WCPUMonitor.cpp  WCPUMonitor.h  WMemoryMonitor.cpp  WMemoryMonitor.h  WSystemManager.cpp
source/WSystemModule/Public/: WSystemManager.h
source/WUDPModule/: CMakeLists.txt
source/WUDPModule/Private/: WUDPClient.cpp  WUDPHandler.cpp  WUDPHandler.h  WUDPHelper.h  WUDPManager.cpp  WUDPServer.cpp
source/WUDPModule/Public/: WUDPClient.h  WUDPHandler.h  WUDPManager.h  WUDPServer.h
source/WUtilitiesModule/: CMakeLists.txt
source/WUtilitiesModule/Private/: WAsyncTaskManager.cpp  WJson.cpp  WScheduledAsyncTaskManager.cpp  WScheduledTaskManager.cpp  WUtilities.cpp
source/WUtilitiesModule/Public/: WAsyncTaskManager.h  WJson.h  WScheduledTaskManager.h  WTaskDefines.h  WUtilities.h
